hard-gists/06336eb10a1628850d6f/run.log
=== Docker Run Log for 06336eb10a1628850d6f ===
Started at: Mi 29. Okt 11:29:02 CET 2025

[2025-10-29 11:29:02] START: Running container for 06336eb10a1628850d6f
[2025-10-29 11:29:03] SUCCESS: Container 2a4248729fd0604a70f201f88d036c78c45f0bc38e4b7787c298da70533b0410 started for 06336eb10a1628850d6f
=== Container logs for 06336eb10a1628850d6f ===
  File "/snippet.py", line 8
    def async(n):
        ^^^^^
SyntaxError: invalid syntax
=== End of logs for 06336eb10a1628850d6f ===
[2025-10-29 11:29:05] INFO: Container 2a4248729fd0604a70f201f88d036c78c45f0bc38e4b7787c298da70533b0410 has stopped
